--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,7 +148,7 @@ jobs:
             aws s3 sync --profile shared-services --include '*.gpg' s3://$AWS_CREDENTIALS_BUCKET/gnupg/ ~/.gnupg
       - run:
           name: Publish to Sonatype
-          command: ./scripts/publish.sh 0.1.$CIRCLE_BUILD_NUM
+          command: ./scripts/publish.sh 2.0.0-pre.$CIRCLE_BUILD_NUM
 
 workflows:
   version: 2
