--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  codacy: codacy/base@2.3.1
+  codacy: codacy/base@2.9.1
 
 workflows:
   version: 2
@@ -18,13 +18,8 @@ workflows:
                  sbt:scalafmt::test;
                  +test;
                  coverage;
-                 coverageReport;
-                 coverageAggregate"
-            if [ -z "$CODACY_PROJECT_TOKEN" ]; then
-              echo "CODACY_PROJECT_TOKEN not found. Skipping send coverage to Codacy."
-            else
-              sbt codacyCoverage
-            fi
+                 coverageReport"
+            bash <(curl -Ls https://coverage.codacy.com/get.sh) report --skip
           persist_to_workspace: true
           requires:
             - codacy/checkout_and_version
@@ -32,7 +27,7 @@ workflows:
           name: publish_sonatype
           context: CodacyAWS
           cmd: |
-            sbt "retrieveGPGKeys;+publishSigned;sonatypeReleaseAll"
+            sbt retrieveGPGKeys +publishSigned sonatypeBundleRelease
           requires:
             - compile_test
           filters:
